plugins {
    id 'java'
    id 'org.springframework.boot' version '4.0.3'
    id 'io.spring.dependency-management' version '1.1.7'
    id 'jacoco'
}

group = 'com.hanaro'
version = '0.0.1-SNAPSHOT'
description = 'hanaro'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

clean {
    delete file('src/main/generated')
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-webmvc'
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    compileOnly 'org.projectlombok:lombok'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-webmvc-test'

    //jpa
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    runtimeOnly 'com.mysql:mysql-connector-j'

    // flyway -> 데이터베이스 마이그레이션 툴
    // 왜? ddl-auto create는 개발용에서만 주로 사용함 (이상한 값이 들어왔을 때 테이블이 생성되면 안되니까)
    // 그래서 migration을 관리하기 위해 flywy를 이용.
    implementation 'org.springframework.boot:spring-boot-starter-flyway'
    implementation 'org.flywaydb:flyway-mysql'

    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'

    // actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'

    // mapStruct
    annotationProcessor 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
    implementation 'org.mapstruct:mapstruct:1.6.3'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.6.3'

    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:3.0.1'

    // file upload
    implementation 'net.coobird:thumbnailator:0.4.21'


//     핫 리로드 방지
//    implementation  'org.springframework.boot:spring-boot-devtools'
//    developmentOnly 'org.springframework.boot:spring-boot-devtools'
}

jacoco {
    toolVersion = "0.8.14"
}

tasks.named('test') {
    useJUnitPlatform()
    jvmArgs '-XX:+EnableDynamicAgentLoading'
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    reports {
        xml.required = true
        html.required = true
    }
}
check.dependsOn jacocoTestReport
jacocoTestCoverageVerification {
    violationRules {
        rule {
            element = 'CLASS'
            limit {
                counter = 'BRANCH'
                value = 'COVEREDRATIO'
                minimum = 0.80
            }
        }
    }
}